# goit_python_web_hw_08

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
doc/: dotenv
scripts/: docker_build_docker-compose.cmd  docker_build_image.cmd  docker_load.cmd  docker_run_docker-compose.cmd  docker_run_hw08.cmd  docker_run_redis.cmd  docker_stop.cmd  requirements.txt
src/: main.py  main_test.py
src/hw/database/: connect.py  init.py  models.py  seeds.py
src/hw08/database/: models.py  search.py  seeds.py
src/hw08/tasks/: consumer.py  consumer_email.py  consumer_sms.py  producer.py  producer_email.py  producer_sms.py
