[tool.poetry]
name = "goit-python-web-hw-08"
version = "0.1.0"
description = ""
authors = ["lexxai <lexxai@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
install = "^1.3.5"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^19.8.0"
tdqm = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
